--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,1 @@
-messages.company.name=must contain only letters and digits and be between 2 and 32 symbols
+messages.default.name=must contain only letters, digits and underscore and be between 2 and 32 symbols
